backend/scripts/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: backend
  replicas: 2
  template:
    metadata:
      labels: 
        name: backend
    spec:
      containers:
      - name: backend
        image: scaleforce172/backend:latest
        ports:
        - containerPort: 8080
