backend/scripts/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    name: backend
